width overflow correction

--- a/style.css
+++ b/style.css
@@ -109,7 +109,6 @@ footer {
   text-align: center;
   position: relative;
   bottom: 0;
-  width: 100%;
   background-color: #ccc;
 
 }
